optimize cache and conversation