@@ -1,10 +1,12 @@
 package com.anonymous.wall.service;
 
 import com.anonymous.wall.entity.ChatMessage;
+import com.anonymous.wall.entity.Conversation;
 import com.anonymous.wall.entity.UserEntity;
 import com.anonymous.wall.model.ConversationDTO;
 import com.anonymous.wall.notification.event.ChatMessageSentEvent;
 import com.anonymous.wall.repository.ChatMessageRepository;
+import com.anonymous.wall.repository.ConversationRepository;
 import com.anonymous.wall.service.base.UserBlockService;
 import com.anonymous.wall.service.base.UserService;
 import com.anonymous.wall.service.impl.ChatServiceImpl;
@@ -30,6 +32,7 @@ class ChatServiceTest {
 
     private ChatServiceImpl chatService;
     private ChatMessageRepository chatMessageRepository;
+    private ConversationRepository conversationRepository;
     private UserService userService;
     private UserBlockService userBlockService;
     @SuppressWarnings("unchecked")
@@ -45,6 +48,7 @@ class ChatServiceTest {
     @BeforeEach
     void setUp() {
         chatMessageRepository = mock(ChatMessageRepository.class);
+        conversationRepository = mock(ConversationRepository.class);
         userService = mock(UserService.class);
         userBlockService = mock(UserBlockService.class);
         chatMessageEventPublisher = mock(ApplicationEventPublisher.class);
@@ -52,21 +56,11 @@ class ChatServiceTest {
         chatService = new ChatServiceImpl();
 
         try {
-            var chatRepoField = ChatServiceImpl.class.getDeclaredField("chatMessageRepository");
-            chatRepoField.setAccessible(true);
-            chatRepoField.set(chatService, chatMessageRepository);
-
-            var userServiceField = ChatServiceImpl.class.getDeclaredField("userService");
-            userServiceField.setAccessible(true);
-            userServiceField.set(chatService, userService);
-
-            var userBlockServiceField = ChatServiceImpl.class.getDeclaredField("userBlockService");
-            userBlockServiceField.setAccessible(true);
-            userBlockServiceField.set(chatService, userBlockService);
-
-            var publisherField = ChatServiceImpl.class.getDeclaredField("chatMessageEventPublisher");
-            publisherField.setAccessible(true);
-            publisherField.set(chatService, chatMessageEventPublisher);
+            setField("chatMessageRepository", chatMessageRepository);
+            setField("conversationRepository", conversationRepository);
+            setField("userService", userService);
+            setField("userBlockService", userBlockService);
+            setField("chatMessageEventPublisher", chatMessageEventPublisher);
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
@@ -96,11 +90,22 @@ class ChatServiceTest {
         blockedUser.setProfileName("BlockedUser");
         blockedUser.setBlocked(true);
 
-        // The impl calls getCombinedBlockedUserIds(senderId).contains(receiverId) — not
-        // isBlockedInAnyDirection. Default to empty set so no user-level blocks exist
-        // unless a specific test overrides this.
         when(userBlockService.getCombinedBlockedUserIds(any(UUID.class)))
                 .thenReturn(Collections.emptySet());
+
+        // Default: no existing conversation rows
+        when(conversationRepository.findByConversationIdAndUserId(any(), any()))
+                .thenReturn(Optional.empty());
+        when(conversationRepository.save(any(Conversation.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
+        when(conversationRepository.update(any(Conversation.class)))
+                .thenAnswer(inv -> inv.getArgument(0));
+    }
+
+    private void setField(String name, Object value) throws Exception {
+        var field = ChatServiceImpl.class.getDeclaredField(name);
+        field.setAccessible(true);
+        field.set(chatService, value);
     }
 
     // ─── Helpers ───────────────────────────────────────────────────────────────
@@ -115,11 +120,20 @@ class ChatServiceTest {
         });
     }
 
-    private ChatMessage lastMessage(UUID senderId, UUID receiverId) {
-        ChatMessage msg = new ChatMessage(senderId, receiverId, "Last message");
-        msg.setId(UUID.randomUUID());
-        msg.setCreatedAt(OffsetDateTime.now());
-        return msg;
+    private Conversation conversation(UUID conversationId, UUID userId, UUID partnerId,
+                                      String partnerProfileName, int unreadCount) {
+        Conversation c = new Conversation();
+        c.setConversationId(conversationId);
+        c.setUserId(userId);
+        c.setPartnerId(partnerId);
+        c.setPartnerProfileName(partnerProfileName);
+        c.setLastMessageContent("Last message");
+        c.setLastMessageSenderId(partnerId);
+        c.setLastMessageReceiverId(userId);
+        c.setLastMessageReadStatus(false);
+        c.setLastMessageAt(OffsetDateTime.now());
+        c.setUnreadCount(unreadCount);
+        return c;
     }
 
     // ─── Send Message — Positive ───────────────────────────────────────────────
@@ -146,42 +160,66 @@ class ChatServiceTest {
         }
 
         @Test
+        @DisplayName("Should upsert conversation rows for both participants on send")
+        void shouldUpsertConversationRowsForBothParticipants() {
+            stubValidSend();
+
+            chatService.sendMessage(testUser1Id, testUser2Id, "Hello!");
+
+            // Two upserts — one per participant
+            verify(conversationRepository, times(2)).save(any(Conversation.class));
+        }
+
+        @Test
+        @DisplayName("Should update existing conversation row instead of insert when row exists")
+        void shouldUpdateExistingConversationRow() {
+            stubValidSend();
+            UUID convId = com.anonymous.wall.util.ConversationIdGenerator.generate(testUser1Id, testUser2Id);
+            Conversation existing = conversation(convId, testUser1Id, testUser2Id, "User2", 0);
+            when(conversationRepository.findByConversationIdAndUserId(eq(convId), eq(testUser1Id)))
+                    .thenReturn(Optional.of(existing));
+
+            chatService.sendMessage(testUser1Id, testUser2Id, "Hello!");
+
+            verify(conversationRepository, atLeastOnce()).update(any(Conversation.class));
+        }
+
+        @Test
+        @DisplayName("Should increment unread count on receiver's conversation row")
+        void shouldIncrementUnreadCountForReceiver() {
+            stubValidSend();
+            UUID convId = com.anonymous.wall.util.ConversationIdGenerator.generate(testUser1Id, testUser2Id);
+            Conversation receiverConv = conversation(convId, testUser2Id, testUser1Id, "User1", 2);
+            when(conversationRepository.findByConversationIdAndUserId(eq(convId), eq(testUser2Id)))
+                    .thenReturn(Optional.of(receiverConv));
+
+            chatService.sendMessage(testUser1Id, testUser2Id, "Hello!");
+
+            ArgumentCaptor<Conversation> captor = ArgumentCaptor.forClass(Conversation.class);
+            verify(conversationRepository, atLeastOnce()).update(captor.capture());
+
+            Conversation updated = captor.getAllValues().stream()
+                    .filter(c -> c.getUserId().equals(testUser2Id))
+                    .findFirst().orElseThrow();
+            assertEquals(3, updated.getUnreadCount(), "Receiver unread count must be incremented");
+        }
+
+        @Test
         @DisplayName("Should trim whitespace from message content")
         void shouldTrimMessageContent() {
             stubValidSend();
-
             ChatMessage result = chatService.sendMessage(testUser1Id, testUser2Id, "  Hello with spaces  ");
-
             assertEquals("Hello with spaces", result.getContent());
         }
 
         @Test
-        @DisplayName("Should send image-only message — null content accepted when imageUrl present")
+        @DisplayName("Should send image-only message")
         void shouldSendImageOnlyMessage() {
             stubValidSend();
-
             ChatMessage result = chatService.sendMessage(testUser1Id, testUser2Id, null,
                     "https://example.com/chat/image.jpg");
-
             assertNotNull(result);
             assertNull(result.getContent());
-            assertEquals("https://example.com/chat/image.jpg", result.getImageUrl());
-            assertEquals(testUser1Id, result.getSenderId());
-            assertEquals(testUser2Id, result.getReceiverId());
-            assertFalse(result.isReadStatus());
-            verify(chatMessageRepository).save(any(ChatMessage.class));
-        }
-
-        @Test
-        @DisplayName("Should send message with both content and imageUrl")
-        void shouldSendMessageWithContentAndImage() {
-            stubValidSend();
-
-            ChatMessage result = chatService.sendMessage(testUser1Id, testUser2Id,
-                    "Check this image!", "https://example.com/chat/image.jpg");
-
-            assertNotNull(result);
-            assertEquals("Check this image!", result.getContent());
             assertEquals("https://example.com/chat/image.jpg", result.getImageUrl());
         }
 
@@ -189,13 +227,12 @@ class ChatServiceTest {
         @DisplayName("Should accept content of exactly 5000 characters — boundary")
         void shouldAcceptContentAtExactLimit() {
             stubValidSend();
-
             assertDoesNotThrow(() ->
                     chatService.sendMessage(testUser1Id, testUser2Id, "a".repeat(5000)));
         }
 
         @Test
-        @DisplayName("Should generate deterministic conversation ID — same regardless of send direction")
+        @DisplayName("Should generate deterministic conversation ID")
         void shouldGenerateDeterministicConversationId() {
             stubValidSend();
             ChatMessage msg1 = chatService.sendMessage(testUser1Id, testUser2Id, "A");
@@ -204,8 +241,7 @@ class ChatServiceTest {
             when(userService.findById(testUser1Id)).thenReturn(Optional.of(testUser1));
             ChatMessage msg2 = chatService.sendMessage(testUser2Id, testUser1Id, "B");
 
-            assertEquals(msg1.getConversationId(), msg2.getConversationId(),
-                    "Conversation ID must be identical regardless of which user is sender");
+            assertEquals(msg1.getConversationId(), msg2.getConversationId());
         }
 
         @Test
@@ -220,11 +256,10 @@ class ChatServiceTest {
             ChatMessageSentEvent event = captor.getValue();
             assertEquals(testUser1Id, event.getSenderUserId());
             assertEquals(testUser2Id, event.getRecipientUserId());
-            assertNotNull(event.getConversationId());
         }
 
         @Test
-        @DisplayName("Should set preview to truncated content with ellipsis when content exceeds 50 chars")
+        @DisplayName("Should truncate preview for long content")
         void shouldTruncatePreviewForLongContent() {
             stubValidSend();
             chatService.sendMessage(testUser1Id, testUser2Id, "a".repeat(100));
@@ -233,26 +268,12 @@ class ChatServiceTest {
             verify(chatMessageEventPublisher).publishEvent(captor.capture());
 
             String preview = captor.getValue().getMessagePreview();
-            // Impl: messageContent.substring(0, 50) + "…"
-            assertEquals(51, preview.length(), "Preview should be 50 chars + ellipsis character");
+            assertEquals(51, preview.length());
             assertTrue(preview.endsWith("…"));
         }
 
         @Test
-        @DisplayName("Should set preview to full content when content is 50 chars or fewer")
-        void shouldNotTruncateShortPreview() {
-            stubValidSend();
-            String shortContent = "a".repeat(50);
-            chatService.sendMessage(testUser1Id, testUser2Id, shortContent);
-
-            ArgumentCaptor<ChatMessageSentEvent> captor = ArgumentCaptor.forClass(ChatMessageSentEvent.class);
-            verify(chatMessageEventPublisher).publishEvent(captor.capture());
-
-            assertEquals(shortContent, captor.getValue().getMessagePreview());
-        }
-
-        @Test
-        @DisplayName("Should set preview to photo emoji when message is image-only")
+        @DisplayName("Should set photo preview for image-only message")
         void shouldSetPhotoPreviewForImageOnlyMessage() {
             stubValidSend();
             chatService.sendMessage(testUser1Id, testUser2Id, null, "https://example.com/image.jpg");
@@ -264,7 +285,7 @@ class ChatServiceTest {
         }
 
         @Test
-        @DisplayName("Should include sender profile name in published event")
+        @DisplayName("Should include sender profile name in event")
         void shouldIncludeSenderProfileNameInEvent() {
             stubValidSend();
             chatService.sendMessage(testUser1Id, testUser2Id, "Hello!");
@@ -287,7 +308,6 @@ class ChatServiceTest {
         void shouldThrowWhenSenderIdNull() {
             IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
                     () -> chatService.sendMessage(null, testUser2Id, "Test message"));
-
             assertEquals("Sender ID and receiver ID must not be null", ex.getMessage());
             verifyNoInteractions(chatMessageRepository);
         }
@@ -297,39 +317,15 @@ class ChatServiceTest {
         void shouldThrowWhenReceiverIdNull() {
             IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
                     () -> chatService.sendMessage(testUser1Id, null, "Test message"));
-
             assertEquals("Sender ID and receiver ID must not be null", ex.getMessage());
-            verifyNoInteractions(chatMessageRepository);
         }
 
         @Test
         @DisplayName("Should throw when both content and imageUrl are null")
-        void shouldThrowWhenBothContentAndImageNull() {
+        void shouldThrowWhenBothNull() {
             IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
                     () -> chatService.sendMessage(testUser1Id, testUser2Id, null, null));
-
             assertEquals("Message must have content or an image", ex.getMessage());
-            verifyNoInteractions(chatMessageRepository);
-        }
-
-        @Test
-        @DisplayName("Should throw when content is empty string and no imageUrl")
-        void shouldThrowWhenContentEmptyAndNoImage() {
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
-                    () -> chatService.sendMessage(testUser1Id, testUser2Id, "", null));
-
-            assertEquals("Message must have content or an image", ex.getMessage());
-            verifyNoInteractions(chatMessageRepository);
-        }
-
-        @Test
-        @DisplayName("Should throw when content is only whitespace and no imageUrl")
-        void shouldThrowWhenContentWhitespaceAndNoImage() {
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
-                    () -> chatService.sendMessage(testUser1Id, testUser2Id, "   ", null));
-
-            assertEquals("Message must have content or an image", ex.getMessage());
-            verifyNoInteractions(chatMessageRepository);
         }
 
         @Test
@@ -337,20 +333,15 @@ class ChatServiceTest {
         void shouldThrowWhenContentTooLong() {
             IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
                     () -> chatService.sendMessage(testUser1Id, testUser2Id, "a".repeat(5001)));
-
             assertEquals("Message content exceeds maximum length of 5000 characters", ex.getMessage());
-            verifyNoInteractions(chatMessageRepository);
         }
 
         @Test
         @DisplayName("Should throw when sender not found")
         void shouldThrowWhenSenderNotFound() {
             when(userService.findById(testUser1Id)).thenReturn(Optional.empty());
-
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
-                    () -> chatService.sendMessage(testUser1Id, testUser2Id, "Test message"));
-
-            assertEquals("Sender not found", ex.getMessage());
+            assertThrows(IllegalArgumentException.class,
+                    () -> chatService.sendMessage(testUser1Id, testUser2Id, "Test"));
             verify(chatMessageRepository, never()).save(any());
         }
 
@@ -359,11 +350,8 @@ class ChatServiceTest {
         void shouldThrowWhenReceiverNotFound() {
             when(userService.findById(testUser1Id)).thenReturn(Optional.of(testUser1));
             when(userService.findById(testUser2Id)).thenReturn(Optional.empty());
-
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
-                    () -> chatService.sendMessage(testUser1Id, testUser2Id, "Test message"));
-
-            assertEquals("Receiver not found", ex.getMessage());
+            assertThrows(IllegalArgumentException.class,
+                    () -> chatService.sendMessage(testUser1Id, testUser2Id, "Test"));
             verify(chatMessageRepository, never()).save(any());
         }
     }
@@ -379,51 +367,19 @@ class ChatServiceTest {
         void shouldThrowWhenReceiverAdminBlocked() {
             when(userService.findById(testUser1Id)).thenReturn(Optional.of(testUser1));
             when(userService.findById(blockedUserId)).thenReturn(Optional.of(blockedUser));
-
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
-                    () -> chatService.sendMessage(testUser1Id, blockedUserId, "Test message"));
-
-            assertEquals("Cannot send message to a blocked user", ex.getMessage());
-            verify(chatMessageRepository, never()).save(any());
+            assertThrows(IllegalArgumentException.class,
+                    () -> chatService.sendMessage(testUser1Id, blockedUserId, "Test"));
         }
 
         @Test
-        @DisplayName("Should throw when sender is admin-blocked")
-        void shouldThrowWhenSenderAdminBlocked() {
-            when(userService.findById(blockedUserId)).thenReturn(Optional.of(blockedUser));
-            when(userService.findById(testUser2Id)).thenReturn(Optional.of(testUser2));
-
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
-                    () -> chatService.sendMessage(blockedUserId, testUser2Id, "Test message"));
-
-            assertEquals("Blocked users cannot send messages", ex.getMessage());
-            verify(chatMessageRepository, never()).save(any());
-        }
-
-        @Test
-        @DisplayName("Should throw when user-level block relationship exists")
+        @DisplayName("Should throw when user-level block exists")
         void shouldThrowWhenUserLevelBlockExists() {
             when(userService.findById(testUser1Id)).thenReturn(Optional.of(testUser1));
             when(userService.findById(testUser2Id)).thenReturn(Optional.of(testUser2));
-            // Impl: getCombinedBlockedUserIds(senderId).contains(receiverId)
             when(userBlockService.getCombinedBlockedUserIds(testUser1Id))
                     .thenReturn(Set.of(testUser2Id));
-
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
-                    () -> chatService.sendMessage(testUser1Id, testUser2Id, "Test message"));
-
-            assertEquals("Cannot send message to this user", ex.getMessage());
-            verify(chatMessageRepository, never()).save(any());
-        }
-
-        @Test
-        @DisplayName("Should allow message when no block relationship exists")
-        void shouldAllowMessageWhenNoBlockExists() {
-            stubValidSend();
-            // getCombinedBlockedUserIds returns empty set by default from @BeforeEach
-
-            assertDoesNotThrow(() -> chatService.sendMessage(testUser1Id, testUser2Id, "Hello!"));
-            verify(chatMessageRepository).save(any(ChatMessage.class));
+            assertThrows(IllegalArgumentException.class,
+                    () -> chatService.sendMessage(testUser1Id, testUser2Id, "Test"));
         }
     }
 
@@ -438,79 +394,31 @@ class ChatServiceTest {
         void shouldReturnHistoryForValidUsers() {
             Pageable pageable = Pageable.from(0, 50);
             Page<ChatMessage> mockPage = mock(Page.class);
-
             when(userService.existsById(testUser1Id)).thenReturn(true);
             when(userService.existsById(testUser2Id)).thenReturn(true);
-            when(chatMessageRepository.findByConversationIdOrderByCreatedAtDesc(any(UUID.class), eq(pageable)))
+            when(chatMessageRepository.findByConversationIdOrderByCreatedAtDesc(any(), eq(pageable)))
                     .thenReturn(mockPage);
 
             Page<ChatMessage> result = chatService.getMessageHistory(testUser1Id, testUser2Id, pageable);
 
             assertNotNull(result);
-            verify(chatMessageRepository).findByConversationIdOrderByCreatedAtDesc(any(UUID.class), eq(pageable));
         }
 
         @Test
-        @DisplayName("Should use same conversation ID regardless of user order")
-        void shouldUseSameConversationIdRegardlessOfOrder() {
-            Pageable pageable = Pageable.from(0, 50);
-            Page<ChatMessage> mockPage = mock(Page.class);
-
-            when(userService.existsById(testUser1Id)).thenReturn(true);
-            when(userService.existsById(testUser2Id)).thenReturn(true);
-            when(chatMessageRepository.findByConversationIdOrderByCreatedAtDesc(any(UUID.class), eq(pageable)))
-                    .thenReturn(mockPage);
-
-            chatService.getMessageHistory(testUser1Id, testUser2Id, pageable);
-            chatService.getMessageHistory(testUser2Id, testUser1Id, pageable);
-
-            ArgumentCaptor<UUID> captor = ArgumentCaptor.forClass(UUID.class);
-            verify(chatMessageRepository, times(2))
-                    .findByConversationIdOrderByCreatedAtDesc(captor.capture(), eq(pageable));
-
-            assertEquals(captor.getAllValues().get(0), captor.getAllValues().get(1),
-                    "Same conversation ID must be used regardless of user order");
-        }
-
-        @Test
-        @DisplayName("Should throw when user1 ID is null")
-        void shouldThrowWhenUser1IdNull() {
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+        @DisplayName("Should throw when user IDs are null")
+        void shouldThrowWhenUserIdsNull() {
+            assertThrows(IllegalArgumentException.class,
                     () -> chatService.getMessageHistory(null, testUser2Id, Pageable.from(0, 50)));
-
-            assertEquals("User IDs must not be null", ex.getMessage());
-        }
-
-        @Test
-        @DisplayName("Should throw when user2 ID is null")
-        void shouldThrowWhenUser2IdNull() {
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+            assertThrows(IllegalArgumentException.class,
                     () -> chatService.getMessageHistory(testUser1Id, null, Pageable.from(0, 50)));
-
-            assertEquals("User IDs must not be null", ex.getMessage());
         }
 
         @Test
-        @DisplayName("Should throw when user1 not found")
-        void shouldThrowWhenUser1NotFound() {
+        @DisplayName("Should throw when users not found")
+        void shouldThrowWhenUsersNotFound() {
             when(userService.existsById(testUser1Id)).thenReturn(false);
-
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+            assertThrows(IllegalArgumentException.class,
                     () -> chatService.getMessageHistory(testUser1Id, testUser2Id, Pageable.from(0, 50)));
-
-            assertTrue(ex.getMessage().contains("User not found"));
-        }
-
-        @Test
-        @DisplayName("Should throw when user2 not found")
-        void shouldThrowWhenUser2NotFound() {
-            when(userService.existsById(testUser1Id)).thenReturn(true);
-            when(userService.existsById(testUser2Id)).thenReturn(false);
-
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
-                    () -> chatService.getMessageHistory(testUser1Id, testUser2Id, Pageable.from(0, 50)));
-
-            assertTrue(ex.getMessage().contains("User not found"));
         }
     }
 
@@ -527,9 +435,8 @@ class ChatServiceTest {
             ChatMessage message = new ChatMessage(testUser1Id, testUser2Id, "Test");
             message.setId(messageId);
             message.setReadStatus(false);
-
             when(chatMessageRepository.findById(messageId)).thenReturn(Optional.of(message));
-            when(chatMessageRepository.update(any(ChatMessage.class))).thenReturn(message);
+            when(chatMessageRepository.update(any())).thenReturn(message);
 
             chatService.markMessageAsRead(messageId, testUser2Id);
 
@@ -538,13 +445,12 @@ class ChatServiceTest {
         }
 
         @Test
-        @DisplayName("Should not call update when message is already read — idempotent")
+        @DisplayName("Should not call update when already read")
         void shouldNotUpdateIfAlreadyRead() {
             UUID messageId = UUID.randomUUID();
             ChatMessage message = new ChatMessage(testUser1Id, testUser2Id, "Test");
             message.setId(messageId);
             message.setReadStatus(true);
-
             when(chatMessageRepository.findById(messageId)).thenReturn(Optional.of(message));
 
             chatService.markMessageAsRead(messageId, testUser2Id);
@@ -553,20 +459,16 @@ class ChatServiceTest {
         }
 
         @Test
-        @DisplayName("Should throw when caller is the sender, not the receiver")
+        @DisplayName("Should throw when caller is sender not receiver")
         void shouldThrowWhenCallerIsNotReceiver() {
             UUID messageId = UUID.randomUUID();
             ChatMessage message = new ChatMessage(testUser1Id, testUser2Id, "Test");
             message.setId(messageId);
-
             when(chatMessageRepository.findById(messageId)).thenReturn(Optional.of(message));
 
-            // testUser1 sent this message — only testUser2 (receiver) can mark it read
             IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
                     () -> chatService.markMessageAsRead(messageId, testUser1Id));
-
             assertEquals("Only the receiver can mark a message as read", ex.getMessage());
-            verify(chatMessageRepository, never()).update(any());
         }
 
         @Test
@@ -574,29 +476,8 @@ class ChatServiceTest {
         void shouldThrowWhenMessageNotFound() {
             UUID messageId = UUID.randomUUID();
             when(chatMessageRepository.findById(messageId)).thenReturn(Optional.empty());
-
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+            assertThrows(IllegalArgumentException.class,
                     () -> chatService.markMessageAsRead(messageId, testUser2Id));
-
-            assertEquals("Message not found", ex.getMessage());
-        }
-
-        @Test
-        @DisplayName("Should throw when message ID is null")
-        void shouldThrowWhenMessageIdNull() {
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
-                    () -> chatService.markMessageAsRead(null, testUser2Id));
-
-            assertEquals("Message ID and user ID must not be null", ex.getMessage());
-        }
-
-        @Test
-        @DisplayName("Should throw when user ID is null")
-        void shouldThrowWhenUserIdNull() {
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
-                    () -> chatService.markMessageAsRead(UUID.randomUUID(), null));
-
-            assertEquals("Message ID and user ID must not be null", ex.getMessage());
         }
     }
 
@@ -607,44 +488,30 @@ class ChatServiceTest {
     class MarkConversationAsRead {
 
         @Test
-        @DisplayName("Should bulk-mark all messages in conversation as read")
-        void shouldMarkAllMessagesAsRead() {
+        @DisplayName("Should bulk-mark all messages as read and reset unread count")
+        void shouldMarkAllMessagesAsReadAndResetUnread() {
+            UUID convId = com.anonymous.wall.util.ConversationIdGenerator.generate(testUser2Id, testUser1Id);
+            Conversation conv = conversation(convId, testUser2Id, testUser1Id, "User1", 5);
+            when(conversationRepository.findByConversationIdAndUserId(eq(convId), eq(testUser2Id)))
+                    .thenReturn(Optional.of(conv));
+
             chatService.markConversationAsRead(testUser2Id, testUser1Id);
 
             verify(chatMessageRepository).updateReadStatusByConversationIdAndReceiverId(
-                    any(UUID.class), eq(testUser2Id), eq(true));
+                    any(), eq(testUser2Id), eq(true));
+
+            ArgumentCaptor<Conversation> captor = ArgumentCaptor.forClass(Conversation.class);
+            verify(conversationRepository).update(captor.capture());
+            assertEquals(0, captor.getValue().getUnreadCount());
         }
 
         @Test
-        @DisplayName("Should use same conversation ID regardless of parameter order")
-        void shouldUseSameConversationIdRegardlessOfOrder() {
-            chatService.markConversationAsRead(testUser1Id, testUser2Id);
-            chatService.markConversationAsRead(testUser2Id, testUser1Id);
-
-            ArgumentCaptor<UUID> captor = ArgumentCaptor.forClass(UUID.class);
-            verify(chatMessageRepository, times(2))
-                    .updateReadStatusByConversationIdAndReceiverId(captor.capture(), any(), eq(true));
-
-            assertEquals(captor.getAllValues().get(0), captor.getAllValues().get(1),
-                    "Conversation ID must be deterministic regardless of parameter order");
-        }
-
-        @Test
-        @DisplayName("Should throw when receiver ID is null")
-        void shouldThrowWhenReceiverIdNull() {
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+        @DisplayName("Should throw when IDs are null")
+        void shouldThrowWhenIdsNull() {
+            assertThrows(IllegalArgumentException.class,
                     () -> chatService.markConversationAsRead(null, testUser1Id));
-
-            assertEquals("Receiver ID and sender ID must not be null", ex.getMessage());
-        }
-
-        @Test
-        @DisplayName("Should throw when sender ID is null")
-        void shouldThrowWhenSenderIdNull() {
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+            assertThrows(IllegalArgumentException.class,
                     () -> chatService.markConversationAsRead(testUser2Id, null));
-
-            assertEquals("Receiver ID and sender ID must not be null", ex.getMessage());
         }
     }
 
@@ -656,62 +523,26 @@ class ChatServiceTest {
 
         @Test
         @DisplayName("Should count unread messages from specific sender")
-        void shouldCountUnreadMessagesFromSender() {
+        void shouldCountUnreadMessages() {
             when(chatMessageRepository.countByConversationIdAndReceiverIdAndReadStatusFalse(
-                    any(UUID.class), eq(testUser2Id))).thenReturn(5L);
-
-            long count = chatService.countUnreadMessages(testUser2Id, testUser1Id);
-
-            assertEquals(5L, count);
+                    any(), eq(testUser2Id))).thenReturn(5L);
+            assertEquals(5L, chatService.countUnreadMessages(testUser2Id, testUser1Id));
         }
 
         @Test
-        @DisplayName("Should return zero when no unread messages exist")
-        void shouldReturnZeroWhenNoUnread() {
-            when(chatMessageRepository.countByConversationIdAndReceiverIdAndReadStatusFalse(
-                    any(UUID.class), eq(testUser2Id))).thenReturn(0L);
-
-            long count = chatService.countUnreadMessages(testUser2Id, testUser1Id);
-
-            assertEquals(0L, count);
+        @DisplayName("Should count total unread messages")
+        void shouldCountTotalUnread() {
+            when(chatMessageRepository.countByReceiverIdAndReadStatusFalse(testUser2Id)).thenReturn(10L);
+            assertEquals(10L, chatService.countTotalUnreadMessages(testUser2Id));
         }
 
         @Test
-        @DisplayName("Should throw when receiver ID is null")
-        void shouldThrowWhenReceiverIdNull() {
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+        @DisplayName("Should throw when IDs are null")
+        void shouldThrowWhenIdsNull() {
+            assertThrows(IllegalArgumentException.class,
                     () -> chatService.countUnreadMessages(null, testUser1Id));
-
-            assertEquals("Receiver ID and sender ID must not be null", ex.getMessage());
-        }
-
-        @Test
-        @DisplayName("Should throw when sender ID is null")
-        void shouldThrowWhenSenderIdNull() {
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
-                    () -> chatService.countUnreadMessages(testUser2Id, null));
-
-            assertEquals("Receiver ID and sender ID must not be null", ex.getMessage());
-        }
-
-        @Test
-        @DisplayName("Should count total unread messages across all conversations")
-        void shouldCountTotalUnreadMessages() {
-            when(chatMessageRepository.countByReceiverIdAndReadStatusFalse(testUser2Id))
-                    .thenReturn(10L);
-
-            long count = chatService.countTotalUnreadMessages(testUser2Id);
-
-            assertEquals(10L, count);
-        }
-
-        @Test
-        @DisplayName("Should throw when receiver ID is null for total count")
-        void shouldThrowWhenReceiverIdNullForTotalCount() {
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+            assertThrows(IllegalArgumentException.class,
                     () -> chatService.countTotalUnreadMessages(null));
-
-            assertEquals("Receiver ID must not be null", ex.getMessage());
         }
     }
 
@@ -722,49 +553,22 @@ class ChatServiceTest {
     class GetUnreadMessages {
 
         @Test
-        @DisplayName("Should return unread messages for a conversation")
+        @DisplayName("Should return unread messages")
         void shouldReturnUnreadMessages() {
-            ChatMessage msg = new ChatMessage(testUser1Id, testUser2Id, "Unread message");
+            ChatMessage msg = new ChatMessage(testUser1Id, testUser2Id, "Unread");
             msg.setId(UUID.randomUUID());
-            msg.setReadStatus(false);
-
             when(chatMessageRepository.findByConversationIdAndReceiverIdAndReadStatusFalse(
-                    any(UUID.class), eq(testUser2Id))).thenReturn(List.of(msg));
+                    any(), eq(testUser2Id))).thenReturn(List.of(msg));
 
             List<ChatMessage> result = chatService.getUnreadMessages(testUser2Id, testUser1Id);
-
             assertEquals(1, result.size());
-            assertFalse(result.get(0).isReadStatus());
         }
 
         @Test
-        @DisplayName("Should return empty list when no unread messages")
-        void shouldReturnEmptyWhenNoUnread() {
-            when(chatMessageRepository.findByConversationIdAndReceiverIdAndReadStatusFalse(
-                    any(UUID.class), eq(testUser2Id))).thenReturn(Collections.emptyList());
-
-            List<ChatMessage> result = chatService.getUnreadMessages(testUser2Id, testUser1Id);
-
-            assertNotNull(result);
-            assertTrue(result.isEmpty());
-        }
-
-        @Test
-        @DisplayName("Should throw when receiver ID is null")
-        void shouldThrowWhenReceiverIdNull() {
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+        @DisplayName("Should throw when IDs are null")
+        void shouldThrowWhenIdsNull() {
+            assertThrows(IllegalArgumentException.class,
                     () -> chatService.getUnreadMessages(null, testUser1Id));
-
-            assertEquals("Receiver ID and sender ID must not be null", ex.getMessage());
-        }
-
-        @Test
-        @DisplayName("Should throw when sender ID is null")
-        void shouldThrowWhenSenderIdNull() {
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
-                    () -> chatService.getUnreadMessages(testUser2Id, null));
-
-            assertEquals("Receiver ID and sender ID must not be null", ex.getMessage());
         }
     }
 
@@ -775,138 +579,79 @@ class ChatServiceTest {
     class GetConversations {
 
         @Test
-        @DisplayName("Should return conversations with correct DTO fields populated")
-        void shouldReturnConversationsSuccessfully() {
-            UUID conversationId = UUID.randomUUID();
-
-            when(chatMessageRepository.findDistinctConversationIdBySenderIdOrReceiverId(
-                    testUser1Id, testUser1Id)).thenReturn(List.of(conversationId));
-            when(chatMessageRepository.findFirstByConversationIdOrderByCreatedAtDesc(conversationId))
-                    .thenReturn(Optional.of(lastMessage(testUser2Id, testUser1Id)));
-            when(userService.findById(testUser2Id)).thenReturn(Optional.of(testUser2));
-            when(chatMessageRepository.countByConversationIdAndReceiverIdAndReadStatusFalse(
-                    conversationId, testUser1Id)).thenReturn(3L);
+        @DisplayName("Should return conversations from conversation table")
+        void shouldReturnConversationsFromTable() {
+            UUID convId = UUID.randomUUID();
+            Conversation conv = conversation(convId, testUser1Id, testUser2Id, "User2", 3);
+            when(conversationRepository.findByUserIdOrderByLastMessageAtDesc(testUser1Id))
+                    .thenReturn(List.of(conv));
 
             List<ConversationDTO> result = chatService.getConversations(testUser1Id);
 
             assertEquals(1, result.size());
-            ConversationDTO conv = result.get(0);
-            assertEquals(testUser2Id, conv.getUserId());
-            assertEquals("User2", conv.getProfileName());
-            assertEquals(3, conv.getUnreadCount());
-            assertNotNull(conv.getLastMessage());
+            assertEquals(testUser2Id, result.get(0).getUserId());
+            assertEquals("User2", result.get(0).getProfileName());
+            assertEquals(3, result.get(0).getUnreadCount());
+            assertNotNull(result.get(0).getLastMessage());
+            // No chatMessageRepository calls — all data comes from conversations table
+            verifyNoInteractions(chatMessageRepository);
         }
 
         @Test
-        @DisplayName("Should return empty list when user has no conversations")
-        void shouldReturnEmptyListWhenNoConversations() {
-            when(chatMessageRepository.findDistinctConversationIdBySenderIdOrReceiverId(
-                    testUser1Id, testUser1Id)).thenReturn(Collections.emptyList());
-
-            List<ConversationDTO> result = chatService.getConversations(testUser1Id);
-
-            assertNotNull(result);
-            assertTrue(result.isEmpty());
-        }
-
-        @Test
-        @DisplayName("Should skip conversation when last message not found")
-        void shouldSkipConversationWhenLastMessageNotFound() {
-            UUID conversationId = UUID.randomUUID();
-
-            when(chatMessageRepository.findDistinctConversationIdBySenderIdOrReceiverId(
-                    testUser1Id, testUser1Id)).thenReturn(List.of(conversationId));
-            when(chatMessageRepository.findFirstByConversationIdOrderByCreatedAtDesc(conversationId))
-                    .thenReturn(Optional.empty());
+        @DisplayName("Should return empty list when no conversations exist")
+        void shouldReturnEmptyList() {
+            when(conversationRepository.findByUserIdOrderByLastMessageAtDesc(testUser1Id))
+                    .thenReturn(Collections.emptyList());
 
             List<ConversationDTO> result = chatService.getConversations(testUser1Id);
 
             assertTrue(result.isEmpty());
-            // Impl continues at lastMessageOpt.isEmpty() before reaching userService
-            verify(userService, never()).findById(any());
+            verifyNoInteractions(chatMessageRepository);
         }
 
         @Test
-        @DisplayName("Should skip conversation when partner user not found in DB")
-        void shouldSkipConversationWhenPartnerNotFound() {
-            UUID conversationId = UUID.randomUUID();
-
-            when(chatMessageRepository.findDistinctConversationIdBySenderIdOrReceiverId(
-                    testUser1Id, testUser1Id)).thenReturn(List.of(conversationId));
-            // Must stub last message — impl reaches partner lookup only after this check passes
-            when(chatMessageRepository.findFirstByConversationIdOrderByCreatedAtDesc(conversationId))
-                    .thenReturn(Optional.of(lastMessage(testUser2Id, testUser1Id)));
-            when(userService.findById(testUser2Id)).thenReturn(Optional.empty());
-
-            List<ConversationDTO> result = chatService.getConversations(testUser1Id);
-
-            assertTrue(result.isEmpty());
-        }
-
-        @Test
-        @DisplayName("Should skip conversation when partner has a user-level block relationship")
-        void shouldSkipConversationWithBlockedPartner() {
-            UUID conversationId = UUID.randomUUID();
-
-            when(chatMessageRepository.findDistinctConversationIdBySenderIdOrReceiverId(
-                    testUser1Id, testUser1Id)).thenReturn(List.of(conversationId));
-            when(chatMessageRepository.findFirstByConversationIdOrderByCreatedAtDesc(conversationId))
-                    .thenReturn(Optional.of(lastMessage(testUser2Id, testUser1Id)));
-            when(userService.findById(testUser2Id)).thenReturn(Optional.of(testUser2));
-            // Impl: getCombinedBlockedUserIds(userId).contains(partnerId)
+        @DisplayName("Should filter out blocked partners")
+        void shouldFilterBlockedPartners() {
+            UUID convId = UUID.randomUUID();
+            Conversation conv = conversation(convId, testUser1Id, testUser2Id, "User2", 0);
+            when(conversationRepository.findByUserIdOrderByLastMessageAtDesc(testUser1Id))
+                    .thenReturn(List.of(conv));
             when(userBlockService.getCombinedBlockedUserIds(testUser1Id))
                     .thenReturn(Set.of(testUser2Id));
 
             List<ConversationDTO> result = chatService.getConversations(testUser1Id);
 
-            assertTrue(result.isEmpty(), "Conversations with blocked users must be filtered out");
+            assertTrue(result.isEmpty());
         }
 
         @Test
-        @DisplayName("Should sort conversations by last message timestamp — most recent first")
-        void shouldSortConversationsByLastMessageDescending() {
+        @DisplayName("Should sort by lastMessageAt descending — most recent first")
+        void shouldSortByLastMessageAtDescending() {
             UUID conv1Id = UUID.randomUUID();
             UUID conv2Id = UUID.randomUUID();
             UUID user3Id = UUID.randomUUID();
 
-            UserEntity user3 = new UserEntity();
-            user3.setId(user3Id);
-            user3.setProfileName("User3");
-            user3.setBlocked(false);
+            Conversation older = conversation(conv1Id, testUser1Id, testUser2Id, "User2", 0);
+            older.setLastMessageAt(OffsetDateTime.now().minusHours(2));
 
-            ChatMessage olderMsg = new ChatMessage(testUser2Id, testUser1Id, "Older");
-            olderMsg.setId(UUID.randomUUID());
-            olderMsg.setCreatedAt(OffsetDateTime.now().minusHours(2));
+            Conversation newer = conversation(conv2Id, testUser1Id, user3Id, "User3", 1);
+            newer.setLastMessageAt(OffsetDateTime.now());
 
-            ChatMessage newerMsg = new ChatMessage(user3Id, testUser1Id, "Newer");
-            newerMsg.setId(UUID.randomUUID());
-            newerMsg.setCreatedAt(OffsetDateTime.now());
-
-            when(chatMessageRepository.findDistinctConversationIdBySenderIdOrReceiverId(
-                    testUser1Id, testUser1Id)).thenReturn(List.of(conv1Id, conv2Id));
-            when(chatMessageRepository.findFirstByConversationIdOrderByCreatedAtDesc(conv1Id))
-                    .thenReturn(Optional.of(olderMsg));
-            when(chatMessageRepository.findFirstByConversationIdOrderByCreatedAtDesc(conv2Id))
-                    .thenReturn(Optional.of(newerMsg));
-            when(userService.findById(testUser2Id)).thenReturn(Optional.of(testUser2));
-            when(userService.findById(user3Id)).thenReturn(Optional.of(user3));
-            when(chatMessageRepository.countByConversationIdAndReceiverIdAndReadStatusFalse(
-                    any(), any())).thenReturn(0L);
+            // Repository returns older first — service must sort
+            when(conversationRepository.findByUserIdOrderByLastMessageAtDesc(testUser1Id))
+                    .thenReturn(List.of(newer, older)); // already ordered by DB
 
             List<ConversationDTO> result = chatService.getConversations(testUser1Id);
 
             assertEquals(2, result.size());
-            assertEquals(user3Id, result.get(0).getUserId(), "Most recent conversation should be first");
-            assertEquals(testUser2Id, result.get(1).getUserId());
+            assertEquals(user3Id, result.get(0).getUserId(), "Most recent conversation first");
         }
 
         @Test
         @DisplayName("Should throw when userId is null")
         void shouldThrowWhenUserIdNull() {
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class,
+            assertThrows(IllegalArgumentException.class,
                     () -> chatService.getConversations(null));
-
-            assertEquals("User ID must not be null", ex.getMessage());
         }
     }
 }
